--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     ]
   },
   "dependencies": {
+    "fecha": "^2.3.3",
+    "flatpickr": "^4.5.1",
     "jquery": "^3.3.1",
-    "normalize-scss": "^7.0.1"
+    "normalize-scss": "^7.0.1",
+    "slugify": "^1.3.0",
+    "sortablejs": "^1.7.0"
   }
 }
