--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "2.0.0",
     "gulp-babel": "^7.0.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-rename": "^1.2.2",
+    "gulp-bro": "^1.0.3",
+    "gulp-clean-css": "^2.3.2",
+    "gulp-minify": "^3.1.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.11",
     "run-sequence": "^2.2.1"
   },
