--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "fecha": "^2.3.3",
     "flatpickr": "^4.5.1",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "normalize-scss": "^7.0.1",
     "slugify": "^1.3.0",
